<resources>
    <string name="app_name">Tabeeb</string>
    <string name="title_activity_dashboard">dashboard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="etEmailHint">Enter Email Address</string>
    <string name="etPassHint">Enter Password</string>
    <string name="btnSignIn">Sign In</string>
    <string name="tvAskSignUp">Not Registered Yet ?</string>
    <string name="btnSignUp">Sign Up</string>
    <string name="etConfPassHint">Confirm Password</string>
    <string name="etNameHint">Enter Name</string>
    <string name="etAgeHint">Enter Age</string>
    <string name="radTextMale">Male</string>
    <string name="radTextFemale">Female</string>
    <string name="radDoctor">Doctor</string>
    <string name="radGenUser">Not a Doctor</string>
    <!--<string name="default_web_client_id">885851601247-2tujsik1qb9bere41rnnehun9ghteq58.apps.googleusercontent.com</string>-->
</resources>
