<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".loginScreen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="191dp"
                android:layout_height="200dp"
                app:srcCompat="@drawable/icon"
                tools:layout_editor_absoluteX="97dp"
                tools:layout_editor_absoluteY="16dp"
                android:contentDescription="@string/app_name"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:layout_width="@dimen/etWidth"
                android:layout_height="@dimen/etHeight"
                android:inputType="textWebEmailAddress"
                android:id="@+id/etEmailId"
                android:hint="@string/etEmailHint"
                android:layout_margin="5dp"
                android:background="@drawable/edit_round"
                android:padding="5dp"
                android:drawableStart="@drawable/user"
                android:textSize="20sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:layout_width="@dimen/etWidth"
                android:layout_height="@dimen/etHeight"
                android:inputType="textPassword"
                android:hint="@string/etPassHint"
                android:id="@+id/etPassword"
                android:layout_margin="5dp"
                android:background="@drawable/edit_round"
                android:padding="5dp"
                android:drawableStart="@drawable/padlock"
                android:textSize="20sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvAskSignUp"
                android:textSize="20sp"
                android:padding="5dp"
                android:textColor="#8725e4"
                android:id="@+id/tvAskSignUp"
                />
        </LinearLayout>

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

            <Button
                android:layout_width="@dimen/etWidth"
                android:layout_height="@dimen/etHeight"
                android:background="@drawable/button_round"
                android:id="@+id/btn_signIn"
                android:layout_margin="5dp"
                android:text="@string/btnSignIn"
                android:textSize="20sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <com.google.android.gms.common.SignInButton
                android:id="@+id/sign_in_button"
                android:layout_width="238dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:contentDescription="@string/common_signin_button_text_long"
                tools:layout_editor_absoluteX="128dp"
                tools:layout_editor_absoluteY="424dp" />

        </LinearLayout>

    </LinearLayout>


</android.support.constraint.ConstraintLayout>